# test_task_by_django

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
menu_builder/: admin.py  asgi.py  models.py  settings.py  urls.py  view.py  views.py  wsgi.py
menu_builder/migrations/: 0001_initial.py  0002_menu_slug.py  0003_remove_menu_slug_menu_url.py  0004_alter_menu_url.py
menu_builder/templates/: base.html  docs.html  home.html  labels.html  menu.html  page.html  page_2.html  tasks.html  two_menus.html
menu_builder/templatetags/: common_tags.py
