[tool.poetry]
name = "menu-builder"
version = "0.1.0"
description = ""
authors = ["Dmitrii Morozov <33morozov@gmail.com>"]
readme = "README.md"
packages = [{include = "menu_builder"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
